Float up Explorer docs to top level

--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction to Apollo GraphOS
-description: The supergraph platform
+description: The GraphQL developer platform
 ---
 
 import {Link} from 'gatsby';
