--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -6,7 +6,7 @@ description: Save and share frequently used GraphQL operations
 You can create **operation collections** in the Apollo Studio Explorer, enabling you to save, organize, and share your organization's frequently used GraphQL operations:
 
 <img
-  src="../../img/operation-collections/list-collections.jpg"
+  src="../img/operation-collections/list-collections.jpg"
   alt="Explorer collections list"
   className="screenshot"
   width="300"
@@ -28,7 +28,7 @@ To create an operation collection in the Explorer:
 1. [Open Studio](https://studio.apollographql.com/) and navigate to the Explorer.
 
    <img
-     src="../../img/operation-collections/list-collections.jpg"
+     src="../img/operation-collections/list-collections.jpg"
      alt="Explorer collections list"
      class="screenshot"
      width="300"
@@ -41,10 +41,10 @@ To create an operation collection in the Explorer:
    A dialog like the following appears:
 
    <img
-     src="../../img/operation-collections/create-collection.jpg"
+     src="../img/operation-collections/create-collection.jpg"
      alt="Create collection dialog"
      class="screenshot"
-     width="500"
+     width="400"
    />
 
 5. Provide a name and optional description for your collection.
@@ -60,7 +60,7 @@ To add operations to a collection:
 1. Define at least one operation in the Explorer's editor panel:
 
    <img
-     src="../../img/operation-collections/create-operation.jpg"
+     src="../img/operation-collections/create-operation.jpg"
      alt="Example query in the Explorer editor panel"
      class="screenshot"
      width="350"
@@ -71,7 +71,7 @@ To add operations to a collection:
 2. Click the "floppy disk" button (shown in the screenshot above) to open the save dialog:
 
    <img
-     src="../../img/operation-collections/save-operation.jpg"
+     src="../img/operation-collections/save-operation.jpg"
      alt="Dialog for saving operation to collection"
      class="screenshot"
      width="500"
@@ -86,7 +86,7 @@ To add operations to a collection:
 That's it! Your newly saved entry appears in its corresponding collection:
 
 <img
-  src="../../img/operation-collections/added-operation.jpg"
+  src="../img/operation-collections/added-operation.jpg"
   alt="Saved operation shown in left panel"
   className="screenshot"
   width="350"
@@ -136,7 +136,7 @@ If you create a [public variant](../graphs/studio-features/#public-variants) of 
 [Apollo Sandbox](./sandbox/) is a special mode of Apollo Studio that doesn't require an Apollo account. If you use Sandbox and _do_ sign in with your Apollo account, you can save personal operation collections that are _specific_ to Sandbox:
 
 <img
-  src="../../img/operation-collections/sandbox-collections.jpg"
+  src="../img/operation-collections/sandbox-collections.jpg"
   alt="Operation collections in Apollo Sandbox"
   className="screenshot"
   width="300"
