--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -288,7 +288,7 @@ Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. 
 
 To distinguish between instances of the same graph running in different environments (such as staging and production), you define multiple **variants** of your graph. Each variant has its own schemas, along with its own change history and metrics.
 
-Each of your graph's variants is shown in Apollo Studio:
+Each of your graph's variants is shown in [Apollo Studio](https://studio.apollographql.com):
 
 <img
   src="../../img/graph-variants.jpg"
@@ -303,4 +303,4 @@ See [this section](./federated-graphs/#adding-a-variant).
 
 ## Publishing schemas
 
-See [Publishing schemas to GraphOS](../schema/cli-registration/).
+See [Publishing schemas to GraphOS](../delivery/cli-registration/).
