--- a/src/content/graphos/explorer/additional-features.mdx
+++ b/src/content/graphos/explorer/additional-features.mdx
@@ -70,7 +70,7 @@ If you're working with a supergraph in Studio, the Explorer dynamically calculat
 
 <img
   className="screenshot"
-  src="../../img/explorer-query-plan.jpg"
+  src="../img/explorer-query-plan.jpg"
   alt="Query plan in the Explorer"
   width="300"
 />
@@ -85,7 +85,7 @@ There are two display modes for query plans. You can switch between **Show plan 
 
 <img
   className="screenshot"
-  src="../../img/explorer-query-plan-diagram.jpg"
+  src="../img/explorer-query-plan-diagram.jpg"
   alt="Query plan diagram in the Explorer"
   width="600"
 />
@@ -106,7 +106,7 @@ To execute a subscription operation, first specify your subscriptions endpoint a
 
 <img
   className="screenshot"
-  src="../../img/explorer-subscriptions-settings.jpg"
+  src="../img/explorer-subscriptions-settings.jpg"
   alt="Subscription settings in the Explorer"
   width="500"
 />
@@ -115,7 +115,7 @@ When you execute a subscription, a Subscriptions panel appears in the bottom-rig
 
 <img
   className="screenshot"
-  src="../../img/explorer-subscriptions-panel.jpg"
+  src="../img/explorer-subscriptions-panel.jpg"
   alt="Subscriptions panel in the Explorer"
   width="500"
 />
