--- a/src/content/graphos/explorer/index.mdx
+++ b/src/content/graphos/explorer/index.mdx
@@ -7,14 +7,14 @@ The Apollo Studio Explorer is a powerful web IDE for creating, running, and mana
 
 <YouTube youTubeId="j8b0Bda_TIw" />
 
-The Explorer is free for all Apollo Studio organizations. It supports all GraphQL operation types (`Query`, `Mutation`, and [`Subscription`](./additional-features/#subscription-support)).
+The Explorer is free for all GraphOS organizations. It supports all GraphQL operation types (`Query`, `Mutation`, and [`Subscription`](./additional-features/#subscription-support)).
 
 ## Setup
 
 To get started with the Explorer, [create a graph](../quickstart/cloud/#2-create-your-first-supergraph) in Apollo Studio and then navigate to that graph's Explorer page:
 
 <img
-  src="../../img/explorer-new-graph.jpg"
+  src="../img/explorer-new-graph.jpg"
   className="screenshot"
   alt="The default Explorer view for a new supergraph"
 />
