Some content tidying

--- a/src/content/graphos/org/organizations.mdx
+++ b/src/content/graphos/org/organizations.mdx
@@ -1,5 +1,5 @@
 ---
-title: Organizations in Apollo Studio
+title: Organizations in GraphOS
 ---
 
 All data in GraphOS (graphs, schemas, metrics, etc.) is associated with a particular **organization**. Every organization has one or more [members](./members/) who manage it and can access its associated data.
