--- a/src/content/graphos/org/account.mdx
+++ b/src/content/graphos/org/account.mdx
@@ -1,5 +1,5 @@
 ---
-title: Managing your Studio user account
+title: Managing your Apollo user account
 ---
 
 ## Creating your account
@@ -7,7 +7,7 @@ title: Managing your Studio user account
 To create your Apollo user account, visit [studio.apollographql.com](https://studio.apollographql.com) and click **Create an account**. You can sign
 up either with an email and password, or with an existing GitHub account.
 
-If you sign up with GitHub, Studio uses your GitHub identity only for
+If you sign up with GitHub, Apollo uses your GitHub identity only for
 login verification purposes. It does not request access to any of your GitHub
 data.
 
