--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -321,12 +321,12 @@ You can configure visibility and grant your organization's members explicit acce
 Note that **Org Admin**s can always see _all_ graphs in your organization.
 
 
-## Graph administration
+## Dangerous actions
 
-### Transferring ownership
+### Transferring graph ownership
 
-You can transfer a graph to a different Studio organization you belong to
-by visiting the graph's Settings page and changing the **graph owner**.
+You can transfer a graph to a different GraphOS organization you belong to
+by visiting the graph's Settings page in Studio and changing the **graph owner**.
 
 ### Deleting a graph
 
