--- a/src/content/basics/intro/platform.mdx
+++ b/src/content/basics/intro/platform.mdx
@@ -3,7 +3,9 @@ title: The Apollo GraphOS platform
 description: Bring your supergraph from prototype to production
 ---
 
-**Apollo GraphOS** is the platform for building, managing, and scaling a **supergraph**: a unified network of your data, services, and capabilities, all composed into a single comprehensive API. With one query to your supergraph's **router**, an application client can fetch data from any combination of sources:
+**Apollo GraphOS** is the platform for building, managing, and scaling a **supergraph**: a unified network of your data, services, and capabilities, all composed into a single distributed API.
+
+With one query to your supergraph's **router**, an application client can fetch data from any combination of sources:
 
 ```mermaid
 flowchart LR;
