Remove development tools category from root sidebar

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -43,7 +43,7 @@ import {SiDiscourse, SiGithub, SiTwitter, SiYoutube} from 'react-icons/si';
   <Docset
     icon={DOCSET_ICONS.rover}
     title="Rover CLI"
-    description="Manage your GraphOS graphs and schemas from the command line."
+    description="Manage your GraphOS graphs and their schemas from the command line."
     path="/rover"
   />
 </DocsetGrid>
