Small homepage tweaks

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -1,7 +1,5 @@
 ---
 title: Apollo Docs
-description: Explore Apollo and GraphOS
-toc: true
 ---
 
 import {ButtonGroup, VStack} from '@chakra-ui/react';
@@ -16,6 +14,8 @@ import {DOCSET_ICONS} from '../../components/DocsetMenu';
 import {SiDiscourse, SiGithub, SiTwitter, SiYoutube} from 'react-icons/si';
 
 **Apollo GraphOS** is the developer platform for building a [**supergraph**](./intro/platform/): a unified network of your organization's data and services, all composed into a single distributed **GraphQL API**.
+
+Apollo provides tools for every developer that interacts with GraphQL—whether you're [building your first API](#for-api-implementers), [querying an existing one](#for-client-developers), or [moving your entire organization onto the supergraph](#for-enterprise-architects).
 
 ## For GraphQL newcomers
 
