--- a/src/content/basics/intro/platform.mdx
+++ b/src/content/basics/intro/platform.mdx
@@ -3,7 +3,7 @@ title: The Apollo GraphOS platform
 description: Bring your supergraph from prototype to production
 ---
 
-**Apollo GraphOS** is the platform for building, managing, and scaling a **supergraph**: a unified network of your data, services, and capabilities, all composed into a single distributed API.
+**Apollo GraphOS** is the platform for building, managing, and scaling a **supergraph**: a unified network of your organization's data, services, and capabilities—all composed into a single distributed API.
 
 With one query to your supergraph's **router**, an application client can fetch data from any combination of sources:
 
